--- a/README
+++ b/README
@@ -2,7 +2,8 @@
 ==========DESCRIPTION========== 
 ===============================
 
-This game is inspired from Minestorm, the Vectrex Game.
+This game is inspired from Minestorm, the Vectrex Game :
+www.youtube.com/watch?v=IVf6AGntHo8
 The player controls a space ship.
 He has to destroy enemies by shooting them to get to the next levels.
 The difficulty increases with each new level.
